nambah page contact us

--- a/css/_device-1024.scss
+++ b/css/_device-1024.scss
@@ -48,4 +48,19 @@
             }
         }
     }
+
+    //---------- CONTACT-US ----------//
+    .contact-us {
+        
+        //---------- MAP ----------//
+        .map {
+            .wr-map {
+                .map-detail {
+                    iframe {
+                        width: 940px;
+                    }
+                }
+            }
+        }
+    }
 }
