--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -89,6 +89,8 @@ body {
         height: 80px;
         background-color: $black;
         border: none;
+        margin-bottom: 0px;
+        box-shadow: 0px 3px 3px grey;
     }
     .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
         background-color: $green;
