--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@ body {
     background-color: #29292A;
     border: none;
     margin-bottom: 0px;
-    box-shadow: 0px 3px 3px grey; }
+    box-shadow: 0px 3px 3px rgba(41, 41, 42, 0.5); }
     .header .navbar-custom .wr-navbar {
       padding: 0px; }
       .header .navbar-custom .wr-navbar .navbar-header {
@@ -117,7 +117,7 @@ body {
     background-color: #fff;
     padding: 30px 0px;
     margin-bottom: 30px;
-    box-shadow: 3px 3px 5px grey; }
+    box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
     .post .artikel p {
       font-size: 16px;
       font-family: 'PT Serif', serif;
@@ -410,7 +410,7 @@ body {
             -o-transition: .2s box-shadow ease-in;
             transition: .2s box-shadow ease-in; }
           .features .wr-features .features-right .newsletter .input button:hover {
-            box-shadow: 3px 3px 5px grey; }
+            box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
           .features .wr-features .features-right .newsletter .input p {
             margin: 0px;
             color: #e3e3e3;
@@ -742,7 +742,7 @@ body {
       .about-page .information .wr-information {
         background-color: #fff;
         padding: 30px 15px;
-        box-shadow: 3px 3px 5px grey; }
+        box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
     .about-page .our-team .content-slider .team-list {
       width: 400px !important;
       padding: 100px !important; }
@@ -779,7 +779,7 @@ body {
     background-color: #fff;
     padding: 30px 0px;
     margin-bottom: 30px;
-    box-shadow: 3px 3px 5px grey; }
+    box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
     .single-post .post .artikel p {
       font-size: 16px;
       font-family: 'PT Serif', serif;
@@ -859,7 +859,7 @@ body {
     .single-post .form-comment .wr-form-comment {
       padding: 30px 0px;
       background-color: #fff;
-      box-shadow: 3px 3px 5px grey; }
+      box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
       .single-post .form-comment .wr-form-comment .title {
         margin: 0px 0px 25px; }
         .single-post .form-comment .wr-form-comment .title h1 {
@@ -891,12 +891,12 @@ body {
           color: #e3e3e3;
           margin: 0px; }
       .single-post .form-comment .wr-form-comment .form button:hover {
-        box-shadow: 3px 3px 5px grey; }
+        box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
   .single-post .comment {
     margin-bottom: 30px; }
   .single-post .wr-comment {
     background-color: #fff;
-    box-shadow: 3px 3px 5px grey;
+    box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5);
     padding: 30px 0px; }
     .single-post .wr-comment .heading-comment {
       margin-bottom: 20px; }
@@ -1101,7 +1101,7 @@ body {
     padding: 30px 15px;
     margin-bottom: 30px;
     background-color: #fff;
-    box-shadow: 3px 3px 5px grey; }
+    box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
     .about-page .information .wr-information p {
       font-weight: 600;
       color: #888888;
@@ -1263,7 +1263,7 @@ body {
     .contact-us .map .wr-map {
       background-color: #fff;
       padding: 30px 15px;
-      box-shadow: 3px 3px 5px grey; }
+      box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
       .contact-us .map .wr-map .map-detail {
         margin-bottom: 30px; }
       .contact-us .map .wr-map .info i {
@@ -1291,7 +1291,7 @@ body {
     .contact-us .form-contact .wr-form-contact {
       padding: 30px 15px;
       background-color: #fff;
-      box-shadow: 3px 3px 5px grey; }
+      box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
       .contact-us .form-contact .wr-form-contact .title {
         border-bottom: 1px solid #b6b6b6;
         margin-bottom: 30px; }
@@ -1320,6 +1320,6 @@ body {
           font-weight: 600;
           color: #e3e3e3; }
       .contact-us .form-contact .wr-form-contact .form .submit-message button:hover {
-        box-shadow: 3px 3px 5px grey; }
+        box-shadow: 3px 3px 5px rgba(41, 41, 42, 0.5); }
 
 /*# sourceMappingURL=custom.css.map */
