nambah user-profile page

--- a/css/_device-1024.scss
+++ b/css/_device-1024.scss
@@ -63,4 +63,23 @@
             }
         }
     }
+
+    //---------- USER-PROFILE ----------//
+    .user-profile {
+
+        .user-info {
+            .wr-user-info {
+                .content {
+                    .info-detail {
+                        tr {
+                            td{
+                                width: 250px !important;
+                                padding-left: 20px !important;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
