--- a/css/_smartphone.scss
+++ b/css/_smartphone.scss
@@ -315,6 +315,7 @@
         }
     }
 
+    //---------- CONTACT US ----------//
     .contact-us {
         
         //---------- MAP ----------//
@@ -360,5 +361,25 @@
             }
         }
         padding: 0px 15px;
+    }
+
+    //---------- USER-PROFILE ----------//
+    .user-profile {
+
+        .user-info {
+            .wr-user-info {
+                .content {
+                    .info-detail {
+                        tr {
+                            td{
+                                width: 250px !important;
+                                padding-left: 0px !important;
+                            }
+                        }
+                    }
+                }
+            }
+            padding: 0px 15px;
+        }
     }
 }
