--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -343,4 +343,24 @@
         }
         padding-top: 175px !important;
     }
+
+    //---------- USER-PROFILE ----------//
+    .user-profile {
+
+        .user-info {
+            .wr-user-info {
+                .content {
+                    .info-detail {
+                        tr {
+                            td{
+                                width: 250px !important;
+                                padding-left: 30px !important;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        padding-top: 175px !important;
+    }
 }
